fix icon gap

--- a/src/block/icon-list-item/style.scss
+++ b/src/block/icon-list-item/style.scss
@@ -9,17 +9,21 @@
 	.stk-block-icon-list-item__content {
 		display: flex;
 		align-items: center;
-		.stk--svg-wrapper .stk--inner-svg svg {
-			height: var(--stk-icon-height, 16px);
-			width: var(--stk-icon-height, 16px);
-			transform: rotate(var(--stk-icon-list-icon-rotation, 0deg));
-			opacity: var(--stk-icon-list-icon-opacity, 1);
-			fill: var(--stk-icon-list-marker-color);
-
-			:is(use,g,path,rect,polygon,ellipse) {
+		.stk--svg-wrapper {
+			margin-right: 4px;
+			.stk--inner-svg svg {
+				height: var(--stk-icon-height, 16px);
+				width: var(--stk-icon-height, 16px);
+				transform: rotate(var(--stk-icon-list-icon-rotation, 0deg));
+				opacity: var(--stk-icon-list-icon-opacity, 1);
 				fill: var(--stk-icon-list-marker-color);
+
+				:is(use,g,path,rect,polygon,ellipse) {
+					fill: var(--stk-icon-list-marker-color);
+				}
 			}
 		}
+
 	}
 }
 
